# hackathon2025

./: .gitignore
agent/: .env.example  Makefile  README.md  agent.py  api.py  app.py  client.py  feedback_pb2.py  feedback_pb2_grpc.py  itinerary.json  mainService_pb2.py  mainService_pb2_grpc.py  planner_result.py  proto_tools.py  pyproject.toml  userInput_pb2.py  userInput_pb2_grpc.py  ws_server.py
agent/proto/: messages.proto
backend/: connect.ts  main.ts  package-lock.json  package.json  readme.md  testClient.ts
corpus/: main.py  pyproject.toml
prompts/: example_question_data.txt  example_response.txt  prompt_for_plan_to_text.txt
sipclient/: README.md  edge_tts_voices.py  sipclient.py
